--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,12 @@
 {
+  "database": {
+    "rules": "database.rules.json"
+  },
   "hosting": {
-    "public": "build/bundled",
-    "rewrites": [ 
-      {
-        "source": "**/!{*.*}",
-        "destination": "/index.html"
-      } 
-    ]
-  }
+    "public": "build/bundled"
+  },
+  "rewrites": [ {
+    "source": "**/!{*.*}",
+    "destination": "/index.html"
+  } ]
 }
